# ide-pagebuilder

./: .env.example  .gitignore  CLAUDE.local  CLAUDE.md  LICENSE  Makefile  README.md  README_LITERALS.md  extract_literals.py  extract_virtual_domains.py  pyproject.toml
.github/workflows/: generate-logo.yml
extracted_literals/efgByStu/: _extraction_map.json  functions.js  header.html  js.js  main_literal.html  style.js
extracted_literals/ftReview/: _extraction_map.json  functions.js  header.html  js.js  main_literal.html  style.js
extracted_literals/name-coach/: _extraction_map.json  functions.js  main_literal.html  style.js
extracted_literals/name-coach-v3/: _extraction_map.json  main_literal.js  style.js
extracted_virtual_domains/spridenName/: _extraction_map.json  codeget.sql
free-tuition/: pages.ftReview.json
name-coach/: pages.name-coach-v3.json  pages.name-coach.json
pages/: pages.efgByStu.json
sample-git-hooks/: post-merge  pre-commit
tests/: test_assets.py  test_extract_literals.py  test_json_structure.py  test_page_validation.py  test_security.py  test_virtual_domains.py
virtualDomains/: README.md  virtualDomains.spridenName.json
